fixed star spacing

--- a/brightStafferapp/static/css/jquery.mCustomScrollbar.css
+++ b/brightStafferapp/static/css/jquery.mCustomScrollbar.css
@@ -31,7 +31,7 @@ CONTENTS:
 		position: relative;
 		overflow: hidden;
 		height: 100%;
-		max-width: 100%;
+		max-width: 98%;
 		outline: none;
 		direction: ltr;
 	}
